---------------------------------------------------------------------------------------------------
Version: 0.1.0
Date: DDMMMYYYY
  Changes:
    - added support for Factorio 2.0
    - added pride and country flag color themes
    - added cargo wagon coloring
    - update license to CC BY-NC-SA 4.0
    - update mod description
  Locale:
    - renamed rainbow palette to rainbow theme
---------------------------------------------------------------------------------------------------
Version: 0.0.3
Date: 30JAN2022
  Changes:
    - add custom train tracking and storage to reduce the number of API calls required
    - optimization of setting value lookups to reduce the number of API calls required
    - minor change to the rainbow color generation script to reduce performance impact
---------------------------------------------------------------------------------------------------
Version: 0.0.2
Date: 29NOV2021
  Changes:
    - release correct version
---------------------------------------------------------------------------------------------------
Version: 0.0.1
Date: 29NOV2021
  Changes:
    - initial release on mod portal