@@ -5,6 +5,7 @@ Date: DDMMMYYYY
     - added support for Factorio 2.0
     - added pride and country flag color themes
     - added cargo wagon coloring
+    - added main menu simulation integration
     - update license to CC BY-NC-SA 4.0
     - update mod description
   Locale:
